<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ivadimn.android0103.ui.MainActivity">

    <Button
        android:id="@+id/btn_test_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_email_id"
        android:text="@string/pass_test"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn_email_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_test_id"
        app:layout_constraintBottom_toTopOf="@+id/btn_private_activity_id"
        android:text="@string/send_email"
        android:onClick="onClick"
        />

    <Button
        android:id="@+id/btn_private_activity_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_email_id"
        android:text="@string/private_activity"
        android:onClick="onClick"
        />

    <TextView
        android:id="@+id/tv_run_check_dial_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/text_check_dial"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"
        android:layout_marginTop="@dimen/margin_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_run_check_dial_id"
        >
        <EditText
            android:id="@+id/et_phone_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/action_dial_string"

            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_right_string_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_phone_id"
        app:layout_constraintLeft_toLeftOf="@id/til_phone_id"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/right_string"
        />

    <Button
        android:id="@+id/btn_check_id"
        android:layout_width="0dp"
        android:layout_margin="@dimen/margin_size"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_right_string_id"
        android:text="@string/start_check_activity"
        android:onClick="onClick"
        />


</android.support.constraint.ConstraintLayout>
